# dualign

./: .env.template  .flake8  .gitignore  .prettierrc  README.md  main.py  pyproject.toml
assets/branding/source/: dualign.ai
demo/: __init__.py  demo_ai_repaired.py  demo_cli.py  demo_gui.py
demo/batch/: 01_simple_loop.md.py  02_with_progress.md.py  03_parallel.md.py  README.md
demo/output/: sample.review.debug.md  sample.review.raw.md  sample.source.ai_repaired.md  sample.source.repaired.md  sample.target.ai_repaired.md  sample.target.repaired.md
demo/raw/: sample.target.md
docs/: CHANGELOG.md  README.md  ai-agent-guide.md  algorithm.md  development.md  faq.md  gui-feature-audit.md  postscript.md  quickstart.md  reference.md  user-guide.md
docs/assets/images/: README.md
docs/notes/: README.md  batch-integration-design.md  doc-review-report.md  instruction-fix-design.md
scripts/: build.py  build_exe.py  env_loader.py  format_all.py  setup.template.iss  sync_branding.py
scripts/Languages/: ChineseSimplified.isl
src/dualign/: __init__.py  __main__.py  common.py  config.py  demo.py  providers.py
src/dualign/core/: __init__.py  aligner.py  file_pair_matcher.py  punctuation.py
src/dualign/gui/: __init__.py  base_table.py  batch_discovery.py  collapsible.py  dialogs.py  filter.py  focus.py  log_panel.py  panels.py  (+13 more)
tests/: test_align_core.py  test_anomaly_persistence.py  test_approval_pipeline.py  test_cli_pipeline.py  test_embedding_providers.py  test_file_pair_matcher.py  test_marker.py  test_provider_config.py  test_punctuation.py  test_repair_state.py
(+19 files in other folders)
